added saving ant connect to mysql database, locally v2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/files_database?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.url= jdbc:mysql://bab2a38d656390:85d6033f@eu-cdbr-west-03.cleardb.net/heroku_1344de3b0bfc52f?reconnect=true
+spring.datasource.username= bab2a38d656390
+spring.datasource.password= 85d6033f
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
