--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
